--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,7 +16,31 @@
                 "run",
                 "--unstable",
                 "--inspect-wait",
+                "--allow-read"
+            ],
+            "args": [
+                "--exportPath",
+                "data/archive-extracted"
+            ],
+            "attachSimplePort": 9229
+        },
+        {
+            "request": "launch",
+            "name": "Launch Program2",
+            "type": "node",
+            "program": "${workspaceFolder}/main.ts",
+            "cwd": "${workspaceFolder}",
+            "env": {},
+            "runtimeExecutable": "deno",
+            "runtimeArgs": [
+                "run",
+                "--unstable",
+                "--inspect-wait",
                 "--allow-all"
+            ],
+            "args": [
+                "--exportPath",
+                "testdata"
             ],
             "attachSimplePort": 9229
         },
