--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
     "configurations": [
         {
             "request": "launch",
-            "name": "Launch Program",
+            "name": "Gather from archive",
             "type": "node",
             "program": "${workspaceFolder}/main.ts",
             "cwd": "${workspaceFolder}",
@@ -14,13 +14,40 @@
             "runtimeExecutable": "deno",
             "runtimeArgs": [
                 "run",
-                "--unstable",
+                "--unstable-kv",
                 "--inspect-wait",
-                "--allow-read"
+                "--allow-read",
+                "--allow-env",
+                "--allow-net"
             ],
             "args": [
                 "--exportPath",
-                "data/archive-extracted"
+                "data/archive-extracted",
+                "--targetAcct",
+                "test_a@electron.phosphor.buzz",
+            ],
+            "attachSimplePort": 9229
+        },
+        {
+            "request": "launch",
+            "name": "Publish from DB",
+            "type": "node",
+            "program": "${workspaceFolder}/main.ts",
+            "cwd": "${workspaceFolder}",
+            "env": {},
+            "runtimeExecutable": "deno",
+            "runtimeArgs": [
+                "run",
+                "--unstable-kv",
+                "--inspect-wait",
+                "--allow-read",
+                "--allow-env",
+                "--allow-net"
+            ],
+            "args": [
+                "--publish",
+                "--targetAcct",
+                "test_a@electron.phosphor.buzz",
             ],
             "attachSimplePort": 9229
         },
