--- a/deno.jsonc
+++ b/deno.jsonc
@@ -6,7 +6,12 @@
         "@std/assert": "jsr:@std/assert@1",
         "key-file-storage": "npm:key-file-storage@^2.3.3",
         "luxon": "npm:luxon@^3.5.0",
-        "megalodon": "npm:megalodon@^10.0.7"
+        "megalodon": "npm:megalodon@^10.0.7",
+        "rehype-parse": "npm:rehype-parse@^9.0.1",
+        "rehype-remark": "npm:rehype-remark@^10.0.0",
+        "rehype-stringify": "npm:rehype-stringify@^10.0.1",
+        "remark-stringify": "npm:remark-stringify@^11.0.0",
+        "unified": "npm:unified@^11.0.5"
     },
     "fmt": {
         "useTabs": false,
