--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -30,6 +30,30 @@
         },
         {
             "request": "launch",
+            "name": "Gather from archive StarHill",
+            "type": "node",
+            "program": "${workspaceFolder}/main.ts",
+            "cwd": "${workspaceFolder}",
+            "env": {},
+            "runtimeExecutable": "deno",
+            "runtimeArgs": [
+                "run",
+                "--unstable-kv",
+                "--inspect-wait",
+                "--allow-read",
+                "--allow-env",
+                "--allow-net"
+            ],
+            "args": [
+                "--exportPath",
+                "/home/vivlim/hell-labs/botsin.space/StarHill-archive-20241205091402-dcd4795b9d1fdf8455f29b10d9cd9ed0",
+                "--targetAcct",
+                "test_b@electron.phosphor.buzz",
+            ],
+            "attachSimplePort": 9229
+        },
+        {
+            "request": "launch",
             "name": "Publish from DB",
             "type": "node",
             "program": "${workspaceFolder}/main.ts",
