--- a/deno.jsonc
+++ b/deno.jsonc
@@ -4,6 +4,8 @@
     },
     "imports": {
         "@std/assert": "jsr:@std/assert@1",
+        "hast": "npm:hast@^1.0.0",
+        "hastscript": "npm:hastscript@^9.0.0",
         "key-file-storage": "npm:key-file-storage@^2.3.3",
         "luxon": "npm:luxon@^3.5.0",
         "megalodon": "npm:megalodon@^10.0.7",
@@ -11,7 +13,9 @@
         "rehype-remark": "npm:rehype-remark@^10.0.0",
         "rehype-stringify": "npm:rehype-stringify@^10.0.1",
         "remark-stringify": "npm:remark-stringify@^11.0.0",
-        "unified": "npm:unified@^11.0.5"
+        "unified": "npm:unified@^11.0.5",
+        "unist-util-remove": "npm:unist-util-remove@^4.0.0",
+        "unist-util-visit": "npm:unist-util-visit@^5.0.0"
     },
     "fmt": {
         "useTabs": false,
